<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="176dp"
    android:background="@color/iclebo_color">


    <ImageView
        android:id="@+id/image_nav_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:contentDescription="@string/nav_header_description"
        android:scaleType="centerInside"
        android:scaleX="1"
        android:scaleY="1"
        app:srcCompat="@mipmap/ic_icleborobot_logo" />

    <TextView
        android:id="@+id/belrobot_nav_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/image_nav_header"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="10dp"
        android:layout_marginStart="20dp"
        android:textColor="@color/white"
        android:text="@string/nav_header_title" />

    <TextView
        android:id="@+id/mail_nav_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/belrobot_nav_header"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="10dp"
        android:layout_marginStart="20dp"
        android:textColor="@color/white"
        android:text="@string/nav_header_subtitle" />



</androidx.constraintlayout.widget.ConstraintLayout>